--- a/Bonita/app/src/main/res/drawable/view_more.xml
+++ b/Bonita/app/src/main/res/drawable/view_more.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/line"/>
+            <solid android:color="@color/white"/>
             <corners
                 android:radius="30dp">
             </corners>
