--- a/Bonita/app/src/main/res/layout/activity_women_service.xml
+++ b/Bonita/app/src/main/res/layout/activity_women_service.xml
@@ -73,6 +73,8 @@
         </LinearLayout>
         <!--notification-->
         <ImageView
+
+            android:onClick="openFilter"
             android:id="@+id/imgFilter"
             android:layout_width="20dp"
             android:layout_height="20dp"
