--- a/Bonita/app/src/main/res/layout/nav_header_main.xml
+++ b/Bonita/app/src/main/res/layout/nav_header_main.xml
@@ -107,7 +107,7 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/border_button"
         android:orientation="horizontal"
-        android:textColor="@color/white">
+        android:textColor="@color/line">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -117,13 +117,14 @@
             />
 
         <TextView
+            android:onClick="logout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="ĐĂNG XUẤT"
             android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
-            android:layout_marginLeft="35dp"
+            android:layout_marginLeft="70dp"
             android:gravity="center_vertical"/>
     </LinearLayout>
 </LinearLayout>
