--- a/Bonita/app/src/main/res/layout/fragment_nearby.xml
+++ b/Bonita/app/src/main/res/layout/fragment_nearby.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:text="Chang Salon"
                 android:textSize="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="#000000"/>
             <TextView
                 android:textStyle="bold"
                 android:layout_width="match_parent"
@@ -37,6 +38,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:text="Đặt chỗ: 3 khách, lúc 19:00 Thứ 5, 03/10/2019"/>
             <LinearLayout
                 android:background="@color/orange"
