--- a/Bonita/app/src/main/res/layout/fragment_newest.xml
+++ b/Bonita/app/src/main/res/layout/fragment_newest.xml
@@ -30,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:text="Chang Salon"
                 android:textSize="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="#000000"/>
             <TextView
                 android:textStyle="bold"
                 android:layout_width="match_parent"
@@ -41,6 +42,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:text="Đặt chỗ: 3 khách, lúc 19:00 Thứ 5, 03/10/2019"/>
             <LinearLayout
                 android:background="@color/orange"
@@ -79,7 +81,8 @@
                     android:layout_height="wrap_content"
                     android:text="Chang Nails"
                     android:textSize="16dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="#000000"/>
                 <TextView
                     android:textStyle="bold"
                     android:layout_width="match_parent"
@@ -90,6 +93,7 @@
                     android:layout_marginRight="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="#000000"
                     android:text="Đặt chỗ: 3 khách, lúc 19:00 Thứ 5, 03/10/2019"/>
                 <LinearLayout
                     android:background="@color/orange"
@@ -101,7 +105,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Hủy"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white"
+                        />
                 </LinearLayout>
             </LinearLayout>
 
