--- a/Bonita/app/src/main/res/layout/slot_available_item.xml
+++ b/Bonita/app/src/main/res/layout/slot_available_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview"
-    android:layout_width="80dp"
+    android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:layout_marginRight="10dp"
@@ -33,15 +33,14 @@
         <TextView
             android:id="@+id/slot_textview2"
             android:layout_width="match_parent"
-            android:layout_height="22dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/border_slot_white"
+            android:gravity="center"
             android:text="150K"
             android:textColor="#FF9800"
             android:textSize="14dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:background="@drawable/border_slot_white"
-            />
+            android:textStyle="bold" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
