--- a/Bonita/app/src/main/res/layout/activity_order_detail.xml
+++ b/Bonita/app/src/main/res/layout/activity_order_detail.xml
@@ -194,13 +194,13 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Ưu đãi"
+                            android:text="Giá tiền"
                             android:textColor="@color/gray" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="-20%"
+                            android:text="299K"
                             android:textColor="@color/red"
                             android:textStyle="bold" />
                     </LinearLayout>
