--- a/Bonita/app/src/main/res/layout/activity_acepted_screen.xml
+++ b/Bonita/app/src/main/res/layout/activity_acepted_screen.xml
@@ -212,7 +212,35 @@
                         android:paddingLeft="50dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="-69%"
+                        android:text="-65%"
+                        android:textColor="@color/red"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:background="@drawable/border_bottom"
+                    android:layout_marginTop="20dp"
+                    android:paddingBottom="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_money" />
+                    <TextView
+                        android:layout_marginTop="2dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Giá : "
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/gray" />
+                    <TextView
+                        android:gravity="right"
+                        android:paddingLeft="50dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="-65%"
                         android:textColor="@color/red"
                         android:textStyle="bold" />
                 </LinearLayout>
