--- a/Bonita/app/src/main/res/layout/fragment_nearby.xml
+++ b/Bonita/app/src/main/res/layout/fragment_nearby.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/imv1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/code1"/>
