--- a/Bonita/app/src/main/res/layout/fragment_newest.xml
+++ b/Bonita/app/src/main/res/layout/fragment_newest.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/imv1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/code2"/>
@@ -67,6 +68,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/imv2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/code3"/>
