--- a/Bonita/app/src/main/res/layout/slot_available_item.xml
+++ b/Bonita/app/src/main/res/layout/slot_available_item.xml
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/slot_textview2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:background="@drawable/border_slot_white"
             android:gravity="center"
